--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 /* 재생 버튼 스타일 */
 #playButton {
   position: absolute;
-  top: 10px; /* 상단에서 10px 내려오도록 조정 */
-  right: 10px; /* 오른쪽에서 10px 떨어지도록 조정 */
+  top: 10px;
+  right: 10px;
   width: 25px;
   height: 25px;
   cursor: pointer;
@@ -102,7 +102,7 @@ body {
 
 #coverdisc {
   margin: 13% 0 5% 0;
-  line-height: 2.9rem;
+  line-height: 2.5rem;
   text-align: center;
 }
 
@@ -120,7 +120,7 @@ body {
 }
 
 #gallerySection {
-  background-color: #FEF8E2;
+  background-color: #EFF7FC;
   padding-top: 20%;
 }
 
@@ -128,7 +128,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-gap: 5px;
-  background-color: #FEF8E2;
+  background-color: #EFF7FC;
   /* (A2) OPTIONAL WIDTH RESTRICT */
   max-width: 1000px;
   margin: 0 auto;
@@ -227,7 +227,7 @@ body {
 }
 
 .countdownTimeInfo {
-  color: #FDA700;
+  color: #004C98;
   font-weight: 600;
 }
 
@@ -249,7 +249,7 @@ body {
   justify-content: center;
   background-color: white;
   align-items: center;
-  width: 165px;
+  width: 150px;
   border-radius: 15px;
   font-size: 13px;
   height: 30px;
@@ -269,7 +269,7 @@ body {
 
 #locationSection {
   margin-top: 3%;
-  background-color: #FEF8E2;
+  background-color: #EFF7FC;
   height: 265px;
 }
 
@@ -334,7 +334,7 @@ main {
 }
 
 .accordion {
-  background-color: #FFF3CA;
+  background-color: #EFF7FC;
   color: black;
   cursor: pointer;
   padding: 0.8rem;
@@ -426,7 +426,7 @@ main {
 }
 
 #kakaoMapButton {
-  background-color: #FFD177;
+  background-color: #6AA7D2;
   padding: 10px;
   text-align: center;
   width: auto;
